# gym_management

./: Dockerfile  MANIFEST.in  app.py  config.py  pyproject.toml  requirements.txt  routes.py  sales functions.txt  setup.cfg
data/: admin.xlsx  attendance.xlsx  custom_products.xlsx  gym_data_backup.xlsx  inventory.xlsx  members.xlsx  packages.xlsx  payments.xlsx  receptionists.xlsx  sales.xlsx  staff.xlsx  staff_attendance.xlsx  trainer_attendance.xlsx  trainers.xlsx
data/backups/: gym_data_backup_20250410_014208.xlsx  gym_data_backup_20250410_014210.xlsx  gym_data_backup_20250410_014412.xlsx  gym_data_backup_20250410_014413.xlsx  gym_data_backup_20250410_014531.xlsx  gym_data_backup_20250410_014740.xlsx
gym/: pyvenv.cfg
gym/Scripts/: activate  activate.bat
gym_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gym_management.egg-info/: PKG-INFO  SOURCES.txt
static/css/: style.css
static/js/: script.js
templates/: add_member.html  attendance.html  base.html  change_password.html  custom_product.html  edit_inventory.html  edit_member.html  edit_package.html  inventory.html  login.html  members.html  packages.html  payment_receipt.html  payments.html  receipt.html  receptionists.html  reports.html  sale_receipt.html  sales.html  staff_attendance.html  trainer_attendance.html  view_receipt.html
templates/admin/: base.html  dashboard.html  edit_staff.html  receptionists.html  staff.html
templates/modals/: add_staff_modal.html
templates/receptionist/: dashboard.html
templates/staff/: base.html  dashboard.html
